--- a/app/views/spaces/new.html.erb
+++ b/app/views/spaces/new.html.erb
@@ -2,19 +2,19 @@
 
 <h1>New Space</h1>
 
-<% if space.errors.any? %>
+<% if space_view.errors.any? %>
   <div id="error_explanation">
     <h2 style='color: #e84118'><%= pluralize(space.errors.count, "error") %>
       prohibited this space from being saved:
     </h2>
     <ul>
-    <% space.errors.full_messages.each do |message| %>
+    <% space_view.errors.full_messages.each do |message| %>
       <li style='color: #e84118'><%= message %></li>
     <% end %>
     </ul>
   </div>
 <% end %>
 
-<%= render 'form', space: @space %>
+<%= render 'form', space_view: space_view %>
 
 <%= link_to 'Back', spaces_path %>
