--- a/app/views/spaces/_form.html.erb
+++ b/app/views/spaces/_form.html.erb
@@ -1,10 +1,13 @@
-<%= form_with(model: space, local: true) do |form| %>
-  <% if space.errors.any? %>
+<%= form_with(model: space_view, local: true) do |form| %>
+  <% if space_view.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(space.errors.count, "error") %> prohibited this space from being saved:</h2>
+      <h2>
+        <%= pluralize(space_view.errors.count, "error") %>
+        prohibited this space from being saved:
+      </h2>
 
       <ul>
-        <% space.errors.full_messages.each do |message| %>
+        <% space_view.errors.full_messages.each do |message| %>
           <li><%= message %></li>
         <% end %>
       </ul>
