--- a/app/views/tenants/_display.html.erb
+++ b/app/views/tenants/_display.html.erb
@@ -39,21 +39,22 @@
     <div class="hero-body">
       <div class="container">
         <div class="columns is-centered is-multiline">
-        <% spaces_view.each do |space_view| %>
-          <div class="column is-full-mobile is-half-tablet is-one-third-widescreen is-centered has-text-centered">
-          <%# <div class="column is-full-mobile is-half-desktop is-one-third-fullhd is-centered has-text-centered"> %>
-            <p class="title is-5">
-              <%= space_view.space_name %>
-              <%# link_to space.space_name,
-                          tenant_space_path(id: space.id, tenant_id: tenant_view.id),
-                          class: "card-footer-item" %>
-            </p>
-            <%= render 'spaces/calendar_mini',
-                          user: user_view, space: space_view, tenant: tenant_view, calendar: calendar_view,
-                          prev_month_path: root_path(date: calendar_view.prev_month_string),
-                          next_month_path: root_path(date: calendar_view.next_month_string) %>
-          </div>
-        <% end %>
+          <% spaces_view.each do |space_view| %>
+            <div class="column is-full-mobile is-half-tablet is-one-third-widescreen is-centered has-text-centered">
+            <%# <div class="column is-full-mobile is-half-desktop is-one-third-fullhd is-centered has-text-centered"> %>
+              <p class="title is-5">
+                <%= space_view.space_name %>
+                <%# link_to space.space_name,
+                            tenant_space_path(id: space.id, tenant_id: tenant_view.id),
+                            class: "card-footer-item" %>
+              </p>
+              <%= render 'spaces/calendar_mini',
+                            user_view: user_view, space_view: space_view,
+                            tenant_view: tenant_view, calendar_view: calendar_view,
+                            prev_month_path: root_path(date: calendar_view.prev_month_string),
+                            next_month_path: root_path(date: calendar_view.next_month_string) %>
+            </div>
+          <% end %>
         </div>
       </div>
     </div>
