--- a/app/views/tenants/show.html.erb
+++ b/app/views/tenants/show.html.erb
@@ -10,6 +10,6 @@
   tenant_show_<%= tenant_view.id %>
 </p>
 
-<%= render 'planners/tenants/display',
+<%= render 'tenants/display',
             user_view: user_view, spaces_view: spaces_view,
             tenant_view: tenant_view, calendar_view: calendar_view %>
